Try making createAndPushVersionTag a javaexec task